--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,6 +26,10 @@
             android:name=".DublinDominoActivity"
             android:label="@string/title_activity_dublin_domino" >
         </activity>
+        <activity
+            android:name=".DominoWicklowActivity"
+            android:label="@string/title_activity_domino_wicklow" >
+        </activity>
     </application>
 
 </manifest>
