Clinic Dates & And Domino Dublin fixed

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.team3.smartapp"
     android:versionCode="1"
     android:versionName="1.0" >
+
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="21" />
@@ -45,5 +46,10 @@
             android:name=".SatelliteActivity"
             android:label="@string/title_activity_satellite" >
         </activity>
+        <activity
+            android:name=".Clinic_dates_Activity"
+            android:label="@string/Clinic_Dates" >
+        </activity>
     </application>
+
 </manifest>
