--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry exported="true" kind="lib" path="libs/postgresql-9.3-1102.jdbc3.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
