--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,9 +3,11 @@
     package="com.team3.smartapp"
     android:versionCode="1"
     android:versionName="1.0" >
+
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="21" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -16,6 +18,7 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -51,5 +54,10 @@
             android:name=".Clinic_dates_Activity"
             android:label="@string/Clinic_Dates" >
         </activity>
+        <activity
+            android:name=".Clinic_Dates_NMH"
+            android:label="@string/title_activity_clinic__dates__nmh" >
+        </activity>
     </application>
+
 </manifest>
