Getters and setters created for Login (Login.java)

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -82,6 +82,10 @@
             android:name=".ClinicDatesHomevisits"
             android:label="@string/title_activity_clinic_dates_homevisits" >
         </activity>
+        <activity
+            android:name=".NmhActivity"
+            android:label="@string/title_activity_nmh" >
+        </activity>
     </application>
 
 </manifest>
