--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,11 +3,10 @@
     package="com.team3.smartapp"
     android:versionCode="1"
     android:versionName="1.0" >
-
     <uses-sdk
         android:minSdkVersion="15"
-        android:targetSdkVersion="21" />
-
+        android:targetSdkVersion="21" />    
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -18,7 +17,6 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -87,5 +85,4 @@
             android:label="@string/title_activity_nmh" >
         </activity>
     </application>
-
 </manifest>
