--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -84,5 +84,9 @@
             android:name=".NmhActivity"
             android:label="@string/title_activity_nmh" >
         </activity>
+        <activity
+            android:name=".SelectTimeActivity"
+            android:label="@string/title_activity_select_time" >
+        </activity>
     </application>
 </manifest>
