--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.team3.smartapp"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
 
     <uses-sdk
         android:minSdkVersion="15"
@@ -10,22 +10,22 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <android:uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+    <!--
+    <android:uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="18" />
     <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <android:uses-permission
-        android:name="android.permission.READ_EXTERNAL_STORAGE"
+    <android:uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="18" />
+    -->
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,84 +34,48 @@
         </activity>
         <activity
             android:name=".AppointmentTypeActivity"
-            android:label="@string/title_activity_appointment_type" >
-        </activity>
+            android:label="@string/title_activity_appointment_type"></activity>
         <activity
             android:name=".ClinicActivity"
-            android:label="@string/title_activity_clinic" >
-        </activity>
-        <activity
-            android:name=".DominoDublinActivity"
-            android:label="@string/title_activity_domino_dublin" >
-        </activity>
-        <activity
-            android:name=".DominoWicklowActivity"
-            android:label="@string/title_activity_domino_wicklow" >
-        </activity>
-        <activity
-            android:name=".EtcDublinActivity"
-            android:label="@string/title_activity_etc_dublin" >
-        </activity>
-        <activity
-            android:name=".EtcWicklowActivity"
-            android:label="@string/title_activity_etc_wicklow" >
-        </activity>
-        <activity
-            android:name=".SatelliteActivity"
-            android:label="@string/title_activity_satellite" >
-        </activity>
-        <activity
-            android:name=".ClinicDatesNMHActivity"
-            android:label="@string/title_activity_clinic_dates_nmh" >
-        </activity>
-        <activity
-            android:name=".Clinic_Dates_NMHOPD"
-            android:label="@string/title_activity_clinic_dates_nmh_opd" >
-        </activity>
-        <activity
-            android:name=".ClinicDatesLeopardstownActivity"
-            android:label="@string/title_activity_clinic_dates_leopardstown" >
-        </activity>
-        <activity
-            android:name=".ClinicDatesDunLaoghaireActivity"
-            android:label="@string/title_activity_clinic_dates_dunlaoghaire" >
-        </activity>
+            android:label="@string/title_activity_clinic"></activity>
         <activity
             android:name=".ClinicDatesChurchtownActivity"
-            android:label="@string/title_activity_clinic_dates_churchtown" >
-        </activity>
+            android:label="@string/title_activity_clinic_dates_churchtown"></activity>
         <activity
-            android:name=".Clinic_Dates_nmh"
-            android:label="@string/title_activity_clinic_dates_nmh" >
-        </activity>
+            android:name=".ClinicDatesDunLaoghaireActivity"
+            android:label="@string/title_activity_clinic_dates_dunlaoghaire"></activity>
         <activity
             android:name=".ClinicDatesHomevisitsActivity"
-            android:label="@string/title_activity_clinic_dates_homevisits" >
-        </activity>
+            android:label="@string/title_activity_clinic_dates_homevisits"></activity>
         <activity
-            android:name=".NmhActivity"
-            android:label="@string/title_activity_nmh" >
-        </activity>
+            android:name=".ClinicDatesLeopardstownActivity"
+            android:label="@string/title_activity_clinic_dates_leopardstown"></activity>
         <activity
-            android:name=".ServiceUserActivity"
-            android:label="@string/title_activity_service_user" >
-        </activity>
+            android:name=".DominoDublinActivity"
+            android:label="@string/title_activity_domino_dublin"></activity>
+        <activity
+            android:name=".DominoWicklowActivity"
+            android:label="@string/title_activity_domino_wicklow"></activity>
+        <activity
+            android:name=".EtcDublinActivity"
+            android:label="@string/title_activity_etc_dublin"></activity>
+        <activity
+            android:name=".EtcWicklowActivity"
+            android:label="@string/title_activity_etc_wicklow"></activity>
+        <activity
+            android:name=".HttpClientActivity"
+            android:label="@string/title_activity_http_client"></activity>
+        <activity
+            android:name=".SatelliteActivity"
+            android:label="@string/title_activity_satellite"></activity>
         <activity
             android:name=".SelectTimeActivity"
-            android:label="@string/title_activity_select_time" >
-        </activity>
+            android:label="@string/title_activity_select_time"></activity>
+        <activity
+            android:name=".ServiceUserActivity"
+            android:label="@string/title_activity_service_user"></activity>
         <activity
             android:name=".ServiceUserSearchActivity"
-            android:label="@string/title_activity_service_user_search" >
-        </activity>
-        <activity
-            android:name=".DbInfo"
-            android:label="@string/title_activity_db_info" >
-        </activity>
-        <activity
-            android:name=".HttpClient"
-            android:label="@string/title_activity_http_client" >
-        </activity>
+            android:label="@string/title_activity_service_user_search"></activity>
     </application>
-
 </manifest>
