--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -62,6 +62,10 @@
             android:label="@string/title_activity_appointment_calendar"
             android:screenOrientation="portrait" >
         </activity>
+        <activity
+            android:name=".ContactDetailsActivity"
+            android:label="@string/title_activity_contact_details" >
+        </activity>
     </application>
 
 </manifest>
