--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,15 @@
         android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
+    <android:uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
 
     <application
         android:allowBackup="true"
@@ -17,7 +25,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="ie.teamchile.smartapp.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -27,46 +35,50 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="ie.teamchile.smartapp.QuickMenuActivity"
+            android:name=".QuickMenuActivity"
             android:label="@string/title_activity_quick_menu"
             android:screenOrientation="portrait" />
         <activity
-            android:name="ie.teamchile.smartapp.AppointmentTypeSpinnerActivity"
+            android:name=".AppointmentTypeSpinnerActivity"
             android:label="@string/title_activity_appointment_type_spinner"
             android:screenOrientation="portrait" />
         <activity
-            android:name="ie.teamchile.smartapp.CalendarActivity"
+            android:name=".CalendarActivity"
             android:label="@string/title_activity_calendar"
             android:screenOrientation="portrait" />
         <activity
-            android:name="ie.teamchile.smartapp.SelectTimeActivity"
+            android:name=".SelectTimeActivity"
             android:label="@string/title_activity_select_time"
             android:screenOrientation="portrait" />
         <activity
-            android:name="ie.teamchile.smartapp.HttpClientActivity"
+            android:name=".HttpClientActivity"
             android:label="@string/title_activity_http_client"
             android:screenOrientation="portrait" />
         <activity
-            android:name="ie.teamchile.smartapp.ServiceUserActivity"
+            android:name=".ServiceUserActivity"
             android:label="@string/title_activity_service_user"
             android:screenOrientation="portrait" />
         <activity
-            android:name="ie.teamchile.smartapp.ServiceUserSearchActivity"
+            android:name=".ServiceUserSearchActivity"
             android:label="@string/title_activity_service_user_search"
             android:screenOrientation="portrait" />
         <activity
-            android:name="ie.teamchile.smartapp.ConfirmAppointmentActivity"
+            android:name=".ConfirmAppointmentActivity"
             android:label="@string/title_activity_confirm_appointment"
             android:screenOrientation="portrait" />
         <activity
-            android:name="ie.teamchile.smartapp.AppointmentCalendarActivity"
+            android:name=".AppointmentCalendarActivity"
             android:label="@string/title_activity_appointment_calendar"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name="ie.teamchile.smartapp.ContactDetailsActivity"
+            android:name=".ContactDetailsActivity"
             android:label="@string/title_activity_contact_details"
             android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".MenuInheritActivity"
+            android:label="@string/title_activity_menu_inherit" >
         </activity>
     </application>
 
