--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,14 +10,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
-
-    <android:uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18" />
-    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <android:uses-permission
-        android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -25,7 +21,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="ie.teamchile.smartapp.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -40,8 +36,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".AppointmentTypeSpinnerActivity"
-            android:label="@string/title_activity_appointment_type_spinner"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_appointment_type_spinner" />
         <activity
             android:name=".CalendarActivity"
             android:label="@string/title_activity_calendar"
@@ -49,10 +45,6 @@
         <activity
             android:name=".SelectTimeActivity"
             android:label="@string/title_activity_select_time"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".HttpClientActivity"
-            android:label="@string/title_activity_http_client"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ServiceUserActivity"
@@ -69,17 +61,10 @@
         <activity
             android:name=".AppointmentCalendarActivity"
             android:label="@string/title_activity_appointment_calendar"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ContactDetailsActivity"
             android:label="@string/title_activity_contact_details"
-            android:screenOrientation="portrait" >
-        </activity>
-        <activity
-            android:name=".MenuInheritActivity"
-            android:label="@string/title_activity_menu_inherit" >
-        </activity>
+            android:screenOrientation="portrait" />
     </application>
-
 </manifest>
