--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -21,7 +21,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="ie.teamchile.smartapp.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -36,8 +36,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".AppointmentTypeSpinnerActivity"
-            android:screenOrientation="portrait"
-            android:label="@string/title_activity_appointment_type_spinner" />
+            android:label="@string/title_activity_appointment_type_spinner"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".CalendarActivity"
             android:label="@string/title_activity_calendar"
@@ -66,5 +66,10 @@
             android:name=".ContactDetailsActivity"
             android:label="@string/title_activity_contact_details"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".TodayAppointmentActivity"
+            android:label="@string/title_activity_today_appointment" >
+        </activity>
     </application>
+
 </manifest>
