rename PostNatal.java and AnteNatal.java to PostNatalActivity.java AnteNatalActivity.java

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -71,11 +71,11 @@
             android:label="@string/title_activity_today_appointment" >
         </activity>
         <activity
-            android:name=".PostNatal"
+            android:name=".PostNatalActivity"
             android:label="@string/title_activity_post_natal" >
         </activity>
         <activity
-            android:name=".AntiNatal"
+            android:name=".AntiNatalActivity"
             android:label="@string/title_activity_anti_natal" >
         </activity>
     </application>
