--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,11 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
-
+    <application
+        android:allowBackup="true"
+        android:icon="@drawable/logo"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -78,5 +82,5 @@
             android:name=".StockNote"
             android:label="@string/title_activity_stock_note" >
         </activity>
-
+    </application>
 </manifest>
