--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <application
-        android:allowBackup="false"
+        android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -26,7 +26,7 @@
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
@@ -67,15 +67,15 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".TodayAppointmentActivity"
-            android:label="@string/title_activity_today_appointment" >
-        </activity>
+            android:label="@string/title_activity_today_appointment" />
         <activity
             android:name=".PostNatalActivity"
-            android:label="@string/title_activity_post_natal" >
-        </activity>
+            android:label="@string/title_activity_post_natal" />
         <activity
             android:name=".AntiNatalActivity"
-            android:label="@string/title_activity_anti_natal" >
-        </activity>
+            android:label="@string/title_activity_anti_natal" />
+        <activity
+            android:name=".StockNote"
+            android:label="@string/title_activity_stock_note" />
     </application>
 </manifest>
