--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -74,7 +74,7 @@
             android:name=".PostNatalActivity"
             android:label="@string/title_activity_post_natal" />
         <activity
-            android:name=".AntiNatalActivity"
+            android:name=".AnteNatalActivity"
             android:label="@string/title_activity_anti_natal" />
         <activity
             android:name=".StockNoteActivity"
