--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,6 @@
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -80,8 +79,10 @@
             android:name=".StockNote"
             android:label="@string/title_activity_stock_note" >
         </activity>
-
-           
+        <activity
+            android:name=".ObstreticHistory"
+            android:label="@string/title_activity_obstretic_history" >
+        </activity>
     </application>
-</manifest>
 
+</manifest>
