--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,6 +23,7 @@
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -88,6 +89,10 @@
         <activity
             android:name=".ParityDetailsActivity"
             android:label="@string/title_activity_parity_details" >
+        </activity>
+		<activity
+            android:name=".CreateAppointmentActivity"
+            android:label="@string/title_activity_create_appointment" >
         </activity>
     </application>
 </manifest>
