--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="15"
+        android:minSdkVersion="21"
         android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -15,7 +15,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />  
-    <uses-permission android:name="android.permission.WRITE_MEDIA_STORAGE" />
+	<uses-permission android:name="android.permission.WRITE_MEDIA_STORAGE" />
     <uses-permission android:name="android.permission.READ_MEDIA_STORAGE" />  
 
     <application
@@ -71,28 +71,31 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".TodayAppointmentActivity"
-            android:label="@string/title_activity_today_appointment" />
+            android:label="@string/title_activity_today_appointment" 
+            android:screenOrientation="portrait" />
         <activity
             android:name=".PostNatalActivity"
-            android:label="@string/title_activity_post_natal" />
+            android:label="@string/title_activity_post_natal" 
+            android:screenOrientation="portrait" />
         <activity
             android:name=".AnteNatalActivity"
-            android:label="@string/title_activity_anti_natal" />
+            android:label="@string/title_activity_anti_natal" 
+            android:screenOrientation="portrait" />
         <activity
             android:name=".StockNoteActivity"
-            android:label="@string/title_activity_stock_note" >
-        </activity>          
+            android:label="@string/title_activity_stock_note"
+			android:screenOrientation="portrait" />
         <activity
             android:name=".ObstreticHistoryActivity"
-            android:label="@string/title_activity_obstretic_history" >
-        </activity>
+            android:label="@string/title_activity_obstretic_history" 
+			android:screenOrientation="portrait" />
         <activity
             android:name=".ParityDetailsActivity"
-            android:label="@string/title_activity_parity_details" >
-        </activity>
+            android:label="@string/title_activity_parity_details" 
+			android:screenOrientation="portrait" />
 		<activity
             android:name=".CreateAppointmentActivity"
-            android:label="@string/title_activity_create_appointment" >
-        </activity>
+            android:label="@string/title_activity_create_appointment"
+            android:screenOrientation="portrait" />
     </application>
 </manifest>
