--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,22 +14,19 @@
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />  
-    <uses-permission android:name="android.permission.WRITE_MEDIA_STORAGE" />
-    <uses-permission android:name="android.permission.READ_MEDIA_STORAGE" />  
 
     <application
         android:allowBackup="false"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -81,18 +78,15 @@
         <activity
             android:name=".StockNoteActivity"
             android:label="@string/title_activity_stock_note" >
-        </activity>          
+        </activity>
         <activity
-            android:name=".ObstreticHistoryActivity"
+            android:name=".ObstetricHistoryActivity"
             android:label="@string/title_activity_obstretic_history" >
         </activity>
         <activity
-            android:name=".ParityDetailsActivity"
+            android:name=".Parity_detailsActivity"
             android:label="@string/title_activity_parity_details" >
         </activity>
-		<activity
-            android:name=".CreateAppointmentActivity"
-            android:label="@string/title_activity_create_appointment" >
-        </activity>
     </application>
+
 </manifest>
