All postnatal information added. Obstretric history view created and somefunctionality added.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,9 +14,8 @@
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />  
-    <uses-permission android:name="android.permission.WRITE_MEDIA_STORAGE" />
-    <uses-permission android:name="android.permission.READ_MEDIA_STORAGE" />  
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_MEDIA_STORAGE" />
 
     <application
         android:allowBackup="false"
@@ -71,32 +70,32 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".TodayAppointmentActivity"
-            android:label="@string/title_activity_today_appointment" 
+            android:label="@string/title_activity_today_appointment"
             android:screenOrientation="portrait" />
         <activity
             android:name=".PostNatalActivity"
-            android:label="@string/title_activity_post_natal" 
+            android:label="@string/title_activity_post_natal"
             android:screenOrientation="portrait" />
         <activity
             android:name=".AnteNatalActivity"
-            android:label="@string/title_activity_anti_natal" 
+            android:label="@string/title_activity_anti_natal"
             android:screenOrientation="portrait" />
         <activity
             android:name=".StockNoteActivity"
-            android:label="@string/title_activity_stock_note" 
+            android:label="@string/title_activity_stock_note"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ObstetricHistoryActivity"
-            android:label="@string/title_activity_obstretic_history" 
-			android:screenOrientation="portrait" />
-        <activity
             android:name=".Parity_detailsActivity"
-            android:label="@string/title_activity_parity_details" 
-			android:screenOrientation="portrait" />
-		<activity
+            android:label="@string/title_activity_parity_details"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".CreateAppointmentActivity"
             android:label="@string/title_activity_create_appointment"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ObstreticHistoryActivity"
+            android:label="@string/title_activity_obstretic_history" >
+        </activity>
     </application>
 
 </manifest>
