--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,7 +27,8 @@
         <activity
             android:name=".activities.LoginActivity"
             android:label="@string/app_name"
-            android:screenOrientation="sensorPortrait" >
+            android:screenOrientation="sensorPortrait"
+            android:theme="@android:style/android:Theme.Material.Light.NoActionBar"> >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
